# mach

./: README.md  TODO.md  channels.scm  guix.scm  mach.cabal
.githooks/: pre-commit
example/: Makefile  main.c  myfunc.c
exe/: Main.hs
lib/Mach/: Error.hs  Eval.hs  Exec.hs  Executor.hs  Macro.hs  Main.hs  Parser.hs  Types.hs  Util.hs
share/: builtin.mk
test/: Golden.hs  Main.hs  Parser.hs  Util.hs
test/golden/append-prerequisites/: Makefile  main.c  myfunc.c  myheader.h
test/golden/builtin-c-compilation1/: Makefile  main.c
test/golden/builtin-c-compilation2/: Makefile  main.c  myfunc.c
test/golden/continue-execution/: Makefile
test/golden/default-rule/: Makefile
test/golden/double-suffix-inference/: Makefile
test/golden/dry-run/: Makefile
test/golden/dry-run-with-exec/: Makefile
test/golden/expand-append/: Makefile
test/golden/expand-conditional/: Makefile
test/golden/expand-delayed/: Makefile
test/golden/expand-immediate/: Makefile
test/golden/ignore-all/: Makefile
test/golden/ignore-all-cmdline/: Makefile
test/golden/ignore-error/: Makefile
test/golden/ignore-error-silent/: Makefile
test/golden/ignore-single/: Makefile
test/golden/include-makefile/: Makefile  targets.mk
test/golden/lvalue-macro/: Makefile
test/golden/no-builtins/: Makefile  foo.c
test/golden/silent-all/: Makefile
test/golden/silent-all-cmdline/: Makefile
test/golden/silent-append/: Makefile
test/golden/silent-exec/: Makefile
test/golden/silent-selected-targets/: Makefile
test/golden/single-suffix-inference/: Makefile
test/golden/substitute-expand/: Makefile
