cabal-version:      3.4
name:               mach
version:            0.1.0.0
synopsis:           A WiP implementation of the POSIX make build system
-- description:
license:            CC-BY-NC-SA-4.0
license-file:       LICENSE
author:             Sören Tempel
maintainer:         soeren+git@soeren-tempel.net
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    README.md
data-files:         share/*.mk
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   lib
    default-language: Haskell2010
    other-modules:    Paths_mach
    exposed-modules:
        Mach.Main,
        Mach.Exec,
        Mach.Eval,
        Mach.Parser,
        Mach.Types,
        Mach.Util,
        Mach.Error

    -- Dependencies without constraints are vendored by GHC itself.
    build-depends:
        base,
        parsec,
        containers,
        directory,
        process,

executable mach
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   exe
    default-language: Haskell2010

    -- Dependencies without constraints are vendored by GHC itself.
    build-depends:
        base,
        mach

test-suite mach-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
      Util,
      Parser,
      Golden

    -- Dependencies without constraints are vendored by GHC itself.
    build-depends:
        base,
        parsec,
        process,
        directory,
        filepath,
        tasty        >=1.4.3,
        tasty-hunit  >=0.10,
        tasty-golden >=2.3.5,
        mach
